syntax = "proto3";

import "common.proto";
import "safe.proto";
import "split.proto";
import "drop.proto";
import "registry.proto";
import "mysteryBox.proto";

package masterfile.events.v1;

message MasterfileEvent {
	oneof event {
		masterfile.safe.v1.ChannelFactoryEvent channel_factory = 1;
		masterfile.split.v1.SplitFactoryEvent split_factory = 2;
		masterfile.drop.v1.DropFactoryEvent drop_factory = 3;
		masterfile.safe.v1.SafeEvent safe = 10;
		masterfile.split.v1.SplitEvent split = 11;
		masterfile.drop.v1.DropEvent drop = 12;
		masterfile.registry.v1.RegistryEvent registry = 99;
		masterfile.mysteryBox.v1.MysteryBoxModuleEvent mystery_box_module = 100;
	}
	masterfile.common.v1.TransactionMetadata metadata = 101;
	uint64 ordinal = 200;
}

message MasterfileEvents {
	repeated MasterfileEvent events = 1;
}